# Labs

./: .gitignore  Lab8.sln
Lab5/: CMakeLists.txt  input.txt  main.cpp  output.txt
Lab9/: CMakeLists.txt  lab99.cpp
